First, make the simpliest case pass

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'java'
 
 repositories {
+  maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
   mavenLocal()
   mavenCentral()
 }
 
 dependencies {
-  testCompile 'junit:junit:4.12'
+  testCompile 'junit:junit:4.13'
   testCompile 'org.hamcrest:hamcrest-core:2.2'
 }
